--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@storybook/react": "^4.1.13",
+    "@types/classnames": "^2.2.7",
     "@types/react": "^16.8.6",
     "@types/react-dom": "^16.8.2",
     "@types/storybook__react": "^4.0.1",
@@ -31,6 +32,7 @@
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "react": "^16.8.3",
     "react-dom": "^16.8.3"
   }
