--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "scripts": {
     "storybook": "start-storybook -p 9001 -c .storybook",
-    "build": "webpack",
-    "start": "webpack-dev-server",
+    "build": "webpack --config tools/webpack.config.prod.js",
+    "start": "webpack-dev-server --config tools/webpack.config.js",
     "lint": "tslint -c tslint.json --project tsconfig.json 'src/**/*'",
     "lint:fix": "tslint --fix -c tslint.json --project tsconfig.json 'src/**/*'"
   },
