--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,42 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./src/server.ts",
   "license": "MIT",
   "scripts": {
-    "lint": "echo 'backend'"
+    "start": "babel-node src/index.ts --extensions '.ts,.tsx,.js,.jsx' --out-dir dist/src",
+    "build": "babel src/index.ts --extensions '.ts,.tsx,.js,.jsx' --out-dir dist/src",
+    "lint": "tslint -c tslint.json --project tsconfig.json 'src/**/*'",
+    "lint:fix": "tslint --fix -c tslint.json --project tsconfig.json 'src/**/*'"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.3.4",
+    "@babel/node": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-typescript": "^7.3.3",
+    "@types/babel__core": "^7.1.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/body-parser": "^1.17.0",
+    "@types/cors": "^2.8.4",
+    "@types/dotenv": "^6.1.0",
+    "@types/express": "^4.16.1",
+    "@types/express-jwt": "^0.0.41",
+    "@types/jsonwebtoken": "^8.3.0",
+    "tslint": "^5.13.1",
+    "tslint-config-airbnb": "^5.11.1",
+    "typescript": "^3.3.3333"
+  },
+  "dependencies": {
+    "@types/sequelize": "^4.27.39",
+    "apollo-server-express": "^2.4.8",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
+    "graphql": "^14.1.1",
+    "jsonwebtoken": "^8.5.0",
+    "sequelize": "^4.43.0"
   }
 }
