--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "devDependencies": {
     "husky": "^1.3.1"
   },
+  "scripts": {
+    "build": "docker-compose build",
+    "start": "docker-compose up",
+    "build:prod": "docker-compose -f docker-compose.prod.yml build",
+    "start:prod": "docker-compose -f docker-compose.prod.yml up"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "cd frontend && yarn lint && cd ../backend && yarn lint"
