--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,12 @@
   "main": "src/index.tsx",
   "license": "MIT",
   "scripts": {
-    "storybook": "start-storybook -p 9001 -c .storybook",
+    "storybook": "start-storybook -p 9001 -c tools/.storybook",
     "build": "webpack --config tools/webpack.config.prod.js",
     "start": "webpack-dev-server --config tools/webpack.config.js --host 0.0.0.0",
     "lint": "tslint -c tslint.json --project tsconfig.json 'src/**/*'",
-    "lint:fix": "tslint --fix -c tslint.json --project tsconfig.json 'src/**/*'"
+    "lint:fix": "tslint --fix -c tslint.json --project tsconfig.json 'src/**/*'",
+    "plop": "plop component"
   },
   "devDependencies": {
     "@storybook/react": "^4.1.13",
@@ -17,9 +18,11 @@
     "@types/react-dom": "^16.8.2",
     "@types/storybook__react": "^4.0.1",
     "css-loader": "^2.1.0",
+    "plop": "^2.3.0",
+    "postcss-apply": "^0.12.0",
+    "postcss-color-function": "^4.0.1",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
-    "postcss-mixins": "^6.2.1",
     "postcss-preset-env": "^6.6.0",
     "raw-loader": "^1.0.0",
     "style-loader": "^0.23.1",
