--- a/backend/.babelrc
+++ b/backend/.babelrc
@@ -1,9 +1,9 @@
 {
   "presets": [
-    "@babel/typescript",
     "@babel/env"
   ],
   "plugins": [
+    "@babel/plugin-proposal-class-properties",
     ["module-resolver", {
       "root": ["./src/"]
     }]
