--- a/backend/package.json
+++ b/backend/package.json
@@ -1,45 +1,38 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "./src/server.ts",
+  "main": "./src/server.js",
   "license": "MIT",
   "scripts": {
-    "build": "babel src --extensions '.ts,.tsx,.js,.jsx' --out-dir dist/src",
-    "start:dev": "babel-node src/index.ts --extensions '.ts,.tsx,.js,.jsx' --out-dir dist/src",
+    "build": "babel src --extensions '.js,.jsx' --out-dir dist/src",
+    "start:dev": "babel-node src/index.ts --extensions '.js,.jsx' --out-dir dist/src",
     "start:prod": "pm2 start dist/src/index.js",
     "restart:prod": "pm2 restart dist/src/index.js",
-    "lint": "tslint -c tslint.json --project tsconfig.json 'src/**/*'",
-    "lint:fix": "tslint --fix -c tslint.json --project tsconfig.json 'src/**/*'"
+    "lint": "eslint 'src/**/*'",
+    "lint:fix": "eslint --fix 'src/**/*'"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.4",
     "@babel/node": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "7.3.4",
     "@babel/preset-env": "^7.3.4",
-    "@babel/preset-typescript": "^7.3.3",
-    "@types/babel__core": "^7.1.0",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/body-parser": "^1.17.0",
-    "@types/cors": "^2.8.4",
-    "@types/dotenv": "^6.1.0",
-    "@types/express": "^4.16.1",
-    "@types/express-jwt": "^0.0.41",
-    "@types/graphql": "^14.0.7",
-    "@types/jsonwebtoken": "^8.3.0",
-    "@types/sequelize": "^4.27.39",
+    "babel-eslint": "^10.0.1",
     "babel-plugin-module-resolver": "^3.2.0",
-    "tslint": "^5.13.1",
-    "tslint-config-airbnb": "^5.11.1",
-    "typescript": "^3.3.3333"
+    "eslint": "^5.15.3",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.16.0"
   },
   "dependencies": {
     "apollo-server-express": "^2.4.8",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "graphql": "^14.1.1",
     "jsonwebtoken": "^8.5.0",
+    "pg": "^7.9.0",
     "sequelize": "^4.43.0"
   }
 }
