--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build": "babel src --extensions '.js,.jsx' --out-dir dist/src",
-    "start:dev": "babel-node src/index.ts --extensions '.js,.jsx' --out-dir dist/src",
+    "start:dev": "babel-node src/index.js --extensions '.js,.jsx' --out-dir dist/src",
     "start:prod": "pm2 start dist/src/index.js",
     "restart:prod": "pm2 restart dist/src/index.js",
     "lint": "eslint 'src/**/*'",
