--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "husky": "^1.3.1"
   },
   "scripts": {
+    "init": "docker-compose build && cd backend && yarn run db:migrate && cd ..",
     "build": "docker-compose build",
     "start": "docker-compose up",
     "build:prod": "docker-compose -f docker-compose.prod.yml build",
