--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,10 @@
   "devDependencies": {
     "@storybook/react": "^4.1.13",
     "@types/classnames": "^2.2.7",
+    "@types/history": "^4.7.2",
     "@types/react": "^16.8.6",
     "@types/react-dom": "^16.8.2",
+    "@types/react-router-dom": "^4.3.1",
     "@types/storybook__react": "^4.0.1",
     "css-loader": "^2.1.0",
     "plop": "^2.3.0",
@@ -35,8 +37,19 @@
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.5.1",
+    "apollo-client": "^2.5.1",
+    "apollo-link": "^1.2.11",
+    "apollo-link-context": "^1.0.17",
+    "apollo-link-error": "^1.1.10",
+    "apollo-link-http": "^1.5.14",
     "classnames": "^2.2.6",
+    "graphql": "^14.2.0",
+    "graphql-tag": "^2.10.1",
+    "history": "^4.9.0",
     "react": "^16.8.3",
-    "react-dom": "^16.8.3"
+    "react-apollo": "^2.5.3",
+    "react-dom": "^16.8.3",
+    "react-router-dom": "^5.0.0"
   }
 }
