--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@storybook/react": "^4.1.13",
     "@types/classnames": "^2.2.7",
+    "@types/graphql": "^14.2.0",
     "@types/history": "^4.7.2",
     "@types/react": "^16.8.6",
     "@types/react-dom": "^16.8.2",
