--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,7 +4,6 @@ COPY package.json yarn.lock ./
 COPY . /app/backend
 WORKDIR /app/backend
 
-RUN yarn
-RUN yarn global add sequelize-cli
+RUN yarn && yarn global add sequelize-cli
 
 EXPOSE 3001
