--- a/backend/DockerfileProd
+++ b/backend/DockerfileProd
@@ -3,9 +3,6 @@ FROM node:8
 WORKDIR /app/backend
 COPY . /app/backend
 
-RUN yarn
-RUN yarn global add sequelize-cli
-RUN yarn global add pm2
-RUN yarn build
+RUN yarn && yarn global add sequelize-cli && yarn global add pm2 && yarn build
 
 EXPOSE 3001
