--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,14 +2,16 @@ version: '3'
 
 services:
   db:
-    container_name: app-db
+    container_name: app-db-prod
     image: postgres
     volumes:
       - db_data:/var/lib/postgresql/data/
 
   backend:
-    container_name: app-backend
-    build: ./backend
+    container_name: app-backend-prod
+    build:
+      context: ./backend
+      dockerfile: ./DockerfileProd
     command: yarn start:prod
     ports:
       - "3001:3001"
@@ -17,12 +19,14 @@ services:
       - db
 
   frontend:
-    container_name: app-frontend
+    container_name: app-frontend-prod
     build:
       context: ./frontend
       dockerfile: ./DockerfileProd
     ports:
       - "80:80"
+    depends_on:
+      - backend
 
 volumes:
   db_data:
