--- a/backend/.babelrc
+++ b/backend/.babelrc
@@ -1,6 +1,13 @@
 {
   "presets": [
-    "@babel/env"
+    [
+      "@babel/env",
+      {
+        "targets": {
+          "node": true
+        }
+      }
+    ]
   ],
   "plugins": [
     "@babel/plugin-proposal-class-properties",
