--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -56,12 +56,9 @@ http {
         location /api {
             proxy_pass http://backend;
             proxy_redirect off;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-            break;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header Host $http_host;
+            proxy_set_header X-Forwarded-Proto "$scheme";
         }
     }
 }
