--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -26,7 +26,7 @@ http {
 
     upstream backend {
         least_conn;
-        server backend:3001 max_fails=3 fail_timeout=30s;
+        server backend-prod:3001 max_fails=3 fail_timeout=30s;
     }
 
     server {
