--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -17,5 +17,12 @@
     "class-methods-use-this" : 0,
     "object-curly-newline": 0,
     "import/prefer-default-export": 0
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "moduleDirectory": ["node_modules", "./src"]
+      }
+    }
   }
 }
