--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@types/classnames": "^2.2.7",
     "@types/graphql": "^14.2.0",
     "@types/history": "^4.7.2",
+    "@types/path-to-regexp": "^1.7.0",
     "@types/react": "^16.8.6",
     "@types/react-dom": "^16.8.2",
     "@types/react-router-dom": "^4.3.1",
@@ -48,8 +49,10 @@
     "graphql": "^14.2.0",
     "graphql-tag": "^2.10.1",
     "history": "^4.9.0",
+    "path-to-regexp": "^3.0.0",
     "react": "^16.8.3",
     "react-apollo": "^2.5.3",
+    "react-apollo-hooks": "^0.4.5",
     "react-dom": "^16.8.3",
     "react-router-dom": "^5.0.0"
   }
